syntax = "proto3";

package greet;
option go_package="greetpb";

service greeter{
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse){};

    rpc GreetServerStream(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};

    rpc GreetClientStream(stream LongGreetRequest) returns (LongGreetResponse){}
}

message LongGreetRequest{
    string messageLong = 1;
}


message LongGreetResponse{
    string result = 1;
}

message GreetRequest {
    string firstName = 1;
    string lastName = 2;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest{
    string firstNames = 1;
    string lastNames = 2;
}

message GreetManyTimesResponse{
    string result = 1;
}



